--- a/web_server/html/main.css
+++ b/web_server/html/main.css
@@ -561,7 +561,7 @@ label.checkbox:active:before {
   opacity: 0
 }
 .show-loading {
-  margin-top: 0 !important;
+  margin-top: 15px !important;
   opacity: 1 !important
 }
 @-webkit-keyframes rotator {
