--- a/web_server/html/main.css
+++ b/web_server/html/main.css
@@ -85,6 +85,7 @@ h1 {
 	right: 0;
 	bottom: 0;
 	overflow-y: scroll;
+	min-height: calc(100vh - 300px);
 }
 #selectedClients li, #selectedAPs li {
 	list-style: none;
@@ -887,4 +888,5 @@ b {
 	-webkit-transform: rotate(-45deg);
 	transform: rotate(-45deg);
 	border-top-left-radius: 0;
+	box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.07);
 }
