Added dark mode

--- a/web_server/html/main.css
+++ b/web_server/html/main.css
@@ -1,13 +1,18 @@
+:root {
+	--theme-color: #1976D2;
+}
 html, body {
 	margin: 0;
 	font-size: 100%;
-	background: #F1F1F1;
 	-webkit-touch-callout: none !important;
 	-webkit-user-select: none !important;
 	-moz-user-select: none !important;
 	-ms-user-select: none !important;
 	user-select: none !important;
 	-webkit-tap-highlight-color: transparent;
+}
+::-webkit-scrollbar-track-color {
+	background: #000;
 }
 .oh, body {
 	overflow: hidden;
@@ -44,7 +49,10 @@ nav .main-header {
 	left: 25px;
 	position: fixed;
 	top: 13px;
-	background: rgba(255, 255, 255, 0.1)
+	background: none;
+}
+#logo-img svg {
+	fill: rgba(255,255,255,0.81);
 }
 nav #links {
 	height: 64px;
@@ -63,7 +71,8 @@ nav #links a {
 }
 nav #links a.active {
 	border-bottom: 3px solid #fff;
-	line-height: 61px
+	line-height: 61px;
+	color: rgba(255, 255, 255, 1);
 }
 nav #links a:hover {
 	background: rgba(255, 255, 255, 0.05)
@@ -93,7 +102,7 @@ h1 {
 	padding: 3px
 }
 #selectedAPs, #selectedClients {
-	background-color: #eff0f1;
+	background-color: rgba(255,255,255,0.04);
 	-webkit-padding-start: 5px
 }
 #networksFound, #apMAC {
@@ -193,7 +202,7 @@ hr.small {
 }
 body.error #error {
 	line-height: 23px;
-	background: #E64A19;
+	background: #d32f2f;
 	color: #fff;
 	word-wrap: break-word;
 	text-align: center;
@@ -202,11 +211,15 @@ body.error #error {
 body.error .main-wrap {
 	padding-top: 35px
 }
-body.error nav {
-	background: #F4511E
+body.error nav,
+body.error button,
+body.error .reboot,
+body.error input[type="checkbox"]:checked + label {
+	background: #e53935 !important;
+	border-color: #e53935;
 }
 body.error .main-header {
-	background: #FF5722
+	background: #f44336 !important
 }
 #networksFound:empty, #apMAC:empty {
 	display: none
@@ -238,7 +251,7 @@ a:focus {
 	cursor: pointer;
 }
 button:disabled, button:disabled:hover {
-	background: #e2e2e2;
+	background: rgba(0,0,0,0.1);
 	box-shadow: none
 }
 .button:hover, button:hover, input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, .reboot:hover {
@@ -256,7 +269,7 @@ button:disabled, button:disabled:hover {
 	background: #E91E63
 }
 .divider {
-	background: #f7f7f7;
+	background: rgba(0,0,0,0.07);
 	height: 2px;
 	margin: 0;
 	margin: .9rem 2% !important
@@ -266,8 +279,9 @@ footer {
 }
 .footer, .sub-section-attribution {
 	padding: 16px 40px;
-	background: #424242;
-	font-weight: 500
+	background: #2b2b31;
+	font-weight: 500;
+	display: block;
 }
 footer ul {
 	list-style: none;
@@ -288,8 +302,9 @@ footer a {
 	white-space: nowrap
 }
 .sub-section-attribution {
-	background: #3a3a3a;
-	font-size: 14px
+	background: #222227;
+	font-size: 14px;
+	width: calc(100% - 80px);
 }
 ::-webkit-input-placeholder {
 	color: #c7c7c7
@@ -464,6 +479,9 @@ label.checkbox:active:before {
 	}
 }
 @media (max-width:520px) {
+	body {
+		background: #F1F1F1;
+	}
 	.network-info {
 		display: none;
 	}
@@ -507,7 +525,7 @@ label.checkbox:active:before {
 		margin: 20px
 	}
 	.card {
-		min-height: 280px
+		min-height: 360px
 	}
 }
 .card-container-basic {
@@ -811,7 +829,8 @@ b {
 	overflow: hidden
 }
 .background svg {
-	height: 200%;
+	height: 100%;
+	width: 100%
 }
 .edit.add, .edit.delete {
 	font-size: 29px;
@@ -836,11 +855,12 @@ b {
 	cursor: pointer;
 }
 .reboot-container {
-	position: fixed;
+	position: fixed !important;
 	bottom: 10px;
 	right: 20px;
 	z-index: 1;
-	pointer-events: none
+	pointer-events: none;
+	overflow: visible !important;
 }
 .tooltip {
 	opacity: 0;
@@ -877,7 +897,7 @@ b {
 	display: block;
 	border-radius: 1000px;
 	line-height: 25px;
-	color: #6b6b6b;
+	color: #1e67a0;
 	margin-top: 5px;
 	font-size: 10px;
 }
@@ -888,5 +908,81 @@ b {
 	-webkit-transform: rotate(-45deg);
 	transform: rotate(-45deg);
 	border-top-left-radius: 0;
-	box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.07);
+	box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.15);
+}
+
+/* Waves library */
+.waves-effect {
+	position: relative;
+	cursor: pointer;
+	display: inline-block;
+	overflow: hidden;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	-webkit-tap-highlight-color: transparent
+}
+.waves-effect .waves-ripple {
+	position: absolute;
+	border-radius: 50%;
+	width: 100px;
+	height: 100px;
+	margin-top: -50px;
+	margin-left: -50px;
+	opacity: 0;
+	background: rgba(0, 0, 0, .2);
+	background: -webkit-radial-gradient(rgba(0, 0, 0, .2) 0, rgba(0, 0, 0, .3) 40%, rgba(0, 0, 0, .4) 50%, rgba(0, 0, 0, .5) 60%, rgba(255, 255, 255, 0) 70%);
+	background: -o-radial-gradient(rgba(0, 0, 0, .2) 0, rgba(0, 0, 0, .3) 40%, rgba(0, 0, 0, .4) 50%, rgba(0, 0, 0, .5) 60%, rgba(255, 255, 255, 0) 70%);
+	background: -moz-radial-gradient(rgba(0, 0, 0, .2) 0, rgba(0, 0, 0, .3) 40%, rgba(0, 0, 0, .4) 50%, rgba(0, 0, 0, .5) 60%, rgba(255, 255, 255, 0) 70%);
+	background: radial-gradient(rgba(0, 0, 0, .2) 0, rgba(0, 0, 0, .3) 40%, rgba(0, 0, 0, .4) 50%, rgba(0, 0, 0, .5) 60%, rgba(255, 255, 255, 0) 70%);
+	-webkit-transition: all .5s ease-out;
+	-moz-transition: all .5s ease-out;
+	-o-transition: all .5s ease-out;
+	transition: all .5s ease-out;
+	-webkit-transition-property: -webkit-transform, opacity;
+	-moz-transition-property: -moz-transform, opacity;
+	-o-transition-property: -o-transform, opacity;
+	transition-property: transform, opacity;
+	-webkit-transform: scale(0) translate(0, 0);
+	-moz-transform: scale(0) translate(0, 0);
+	-ms-transform: scale(0) translate(0, 0);
+	-o-transform: scale(0) translate(0, 0);
+	transform: scale(0) translate(0, 0);
+	pointer-events: none
+}
+.waves-effect.waves-light .waves-ripple {
+	background: rgba(255, 255, 255, .4);
+	background: -webkit-radial-gradient(rgba(255, 255, 255, .2) 0, rgba(255, 255, 255, .3) 40%, rgba(255, 255, 255, .4) 50%, rgba(255, 255, 255, .5) 60%, rgba(255, 255, 255, 0) 70%);
+	background: -o-radial-gradient(rgba(255, 255, 255, .2) 0, rgba(255, 255, 255, .3) 40%, rgba(255, 255, 255, .4) 50%, rgba(255, 255, 255, .5) 60%, rgba(255, 255, 255, 0) 70%);
+	background: -moz-radial-gradient(rgba(255, 255, 255, .2) 0, rgba(255, 255, 255, .3) 40%, rgba(255, 255, 255, .4) 50%, rgba(255, 255, 255, .5) 60%, rgba(255, 255, 255, 0) 70%);
+	background: radial-gradient(rgba(255, 255, 255, .2) 0, rgba(255, 255, 255, .3) 40%, rgba(255, 255, 255, .4) 50%, rgba(255, 255, 255, .5) 60%, rgba(255, 255, 255, 0) 70%)
+}
+.waves-effect.waves-classic .waves-ripple {
+	background: rgba(0, 0, 0, .2)
+}
+.waves-effect.waves-classic.waves-light .waves-ripple {
+	background: rgba(255, 255, 255, .4)
+}
+.waves-button, .waves-circle {
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-mask-image: -webkit-radial-gradient(circle, #fff 100%, #000 100%)
+}
+.waves-button, .waves-button:hover, .waves-button:visited, .waves-button-input {
+	white-space: nowrap;
+	vertical-align: middle;
+	cursor: pointer;
+	border: none;
+	outline: 0;
+	color: inherit;
+	background-color: transparent;
+	font-size: 1em;
+	line-height: 1em;
+	text-align: center;
+	text-decoration: none;
+	z-index: 1
 }
