--- a/web_server/html/main.css
+++ b/web_server/html/main.css
@@ -109,7 +109,7 @@ h1 {
 	padding: 3px
 }
 #selectedAPs, #selectedClients {
-	background-color: rgba(255,255,255,0.04);
+	background-color: rgba(255, 255, 255, 0.04);
 	-webkit-padding-start: 5px
 }
 #networksFound, #apMAC {
@@ -202,10 +202,7 @@ body.error #error {
 	text-align: center;
 	font-size: 11px
 }
-body.error nav,
-body.error button,
-body.error .reboot,
-body.error input[type="checkbox"]:checked + label {
+body.error nav, body.error button, body.error .reboot, body.error input[type="checkbox"]:checked + label {
 	background: #e53935 !important;
 	border-color: #e53935;
 }
@@ -245,7 +242,7 @@ a:focus {
 	cursor: pointer;
 }
 button:disabled, button:disabled:hover {
-	background: rgba(0,0,0,0.1);
+	background: rgba(0, 0, 0, 0.1);
 	box-shadow: none
 }
 .button:hover, button:hover, input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, .reboot:hover {
@@ -263,7 +260,7 @@ button:disabled, button:disabled:hover {
 	background: #E91E63
 }
 .divider {
-	background: rgba(0,0,0,0.07);
+	background: rgba(0, 0, 0, 0.07);
 	height: 2px;
 	margin: 0;
 	margin: .9rem 2% !important
@@ -296,7 +293,7 @@ footer a {
 	white-space: nowrap
 }
 .sub-section-attribution {
-	background: rgba(0,0,0,0.15);
+	background: rgba(0, 0, 0, 0.15);
 	font-size: 14px;
 	width: calc(100% - 80px);
 }
@@ -472,32 +469,31 @@ label.checkbox:active:before {
 		top: 65px !important
 	}
 }
-@media (min-width: 520px) {
+@media (min-width:520px) {
 	body {
 		overflow: hidden;
 	}
-
-::-webkit-scrollbar:not(:disabled) {
-	width: 14px;
-	background-color: #E8E8E8
-}
-::-webkit-scrollbar-thumb {
-	background-color: #a9a9a9;
-}
-::-webkit-scrollbar-thumb:hover {
-	background-color: #b5b5b5
-}
-::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
-	background-color: #6d6d6d
-}
-::-webkit-scrollbar-button {
-	width: 0;
-	height: 0;
-	display: none
-}
-::-webkit-scrollbar-corner {
-	background-color: transparent
-}
+	::-webkit-scrollbar:not(:disabled) {
+		width: 14px;
+		background-color: #E8E8E8
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #a9a9a9;
+	}
+	::-webkit-scrollbar-thumb:hover {
+		background-color: #b5b5b5
+	}
+	::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
+		background-color: #6d6d6d
+	}
+	::-webkit-scrollbar-button {
+		width: 0;
+		height: 0;
+		display: none
+	}
+	::-webkit-scrollbar-corner {
+		background-color: transparent
+	}
 }
 @media (max-width:520px) {
 	body {
@@ -520,9 +516,6 @@ label.checkbox:active:before {
 	.main-wrap {
 		top: 65px !important;
 		position: relative !important;
-	}
-	.tooltip {
-		display: none !important;
 	}
 }
 #logo-img2 {
@@ -659,7 +652,8 @@ label.checkbox:active:before {
 }
 .spinner {
 	-webkit-animation: rotator 1.4s linear infinite;
-	animation: rotator 1.4s linear infinite
+	animation: rotator 1.4s linear infinite;
+	transition: ease 0.3s opacity;
 }
 #spinner-container {
 	position: fixed;
@@ -674,6 +668,9 @@ label.checkbox:active:before {
 	z-index: 99;
 	margin-top: -100px;
 	opacity: 0
+}
+#spinner-container svg {
+	position: absolute;
 }
 .show-loading {
 	margin-top: 15px !important;
@@ -869,13 +866,16 @@ b {
 	width: 40px;
 	padding: 10px;
 	background: #2196F3;
-	border-radius: 1000px;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-	transition: box-shadow .3s ease, background .3s ease;
+	transition: background .3s ease;
 	pointer-events: initial;
 	display: inline-block;
 	position: relative;
 	cursor: pointer;
+}
+.reboot-inner {
+	border-radius: 1000px;
+	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+	transition: box-shadow .3s ease;
 }
 .reboot-container {
 	position: fixed !important;
@@ -1011,4 +1011,22 @@ b {
 }
 span.light {
 	opacity: 0.4;
+}
+.failed-save {
+	background: #E53935 !important
+}
+.success-save {
+	background: #4CAF50 !important
+}
+.success-svg, .failed-svg {
+	transition: ease 1s opacity;
+	opacity: 0;
+	fill: #fff;
+	stroke: #fff;
+}
+.failed-save .spinner, .success-save .spinner {
+	opacity: 0;
+}
+.failed-save .failed-svg, .success-save .success-svg {
+	opacity: 1;
 }
