--- a/web_server/html/dark.css
+++ b/web_server/html/dark.css
@@ -5,7 +5,7 @@
 	background: #1B1B21
 }
 body {
-	background: #202026;
+	background: #28282E;
 	color: #fff
 }
 nav .main-header {
@@ -15,7 +15,14 @@ button, .reboot {
 	background: #61616f
 }
 button:hover, .reboot:hover {
-	background: #6c6c79
+	background: #6c6c79;
+}
+.secondary {
+	color: #bfbfbf;
+}
+.secondary:hover {
+	background: rgba(255,255,255,0.1);
+	color: #e4e4e4;
 }
 *, .input-container label {
 	color: #dadada
@@ -27,7 +34,7 @@ button:hover, .reboot:hover {
 	background: rgba(255, 255, 255, 0.1)
 }
 .card, .card-basic, table {
-	background: #4B4B54
+	background: #37373D
 }
 .WiFi svg {
 	fill: #ffffff
@@ -60,42 +67,41 @@ h1 {
 a {
 	color: #8aa0d4
 }
-#logo-img2 svg {
+.card-basic #logo-img svg {
 	fill: #f9f9f9
 }
-#logo-img2 {
+.card-basic #logo-img {
 	background: -webkit-linear-gradient(135deg, #41414a 0%, #2d2d31 100%);
 	background: linear-gradient(135deg, #41414a 0%, #2d2d31 100%)
 }
 :root {
 	--theme-color: #1B1B21;
 }
-::-webkit-scrollbar:not(:disabled) {
-	width: 14px;
-	background-color: #1D1D23
+@media (min-width:520px) {
+	::-webkit-scrollbar {
+		width: 14px;
+		background-color: #1D1D23
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #4B4B54;
+	}
+	::-webkit-scrollbar-thumb:hover {
+		background-color: #51515a
+	}
+	::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
+		background-color: #393942
+	}
+	::-webkit-scrollbar-button {
+		width: 0;
+		height: 0;
+		display: none
+	}
+	::-webkit-scrollbar-corner {
+		background-color: transparent
+	}
 }
-::-webkit-scrollbar-thumb {
-	background-color: #4B4B54;
-}
-::-webkit-scrollbar-thumb:hover {
-	background-color: #51515a
-}
-::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
-	background-color: #393942
-}
-::-webkit-scrollbar-button {
-	width: 0;
-	height: 0;
-	display: none
-}
-::-webkit-scrollbar-corner {
-	background-color: transparent
-}
-
-.input-container input:valid,
-.input-container input:placeholder-shown,
-.input-container input:invalid:focus {
-	border-bottom: 2px solid #696973 !important;
+.input-container input:valid, .input-container input:placeholder-shown, .input-container input:invalid:focus {
+	border-bottom: 2px solid #47474e !important;
 }
 nav #links a.active {
 	box-shadow: 0 -3px 0 #DADADA inset
@@ -105,4 +111,10 @@ nav #links a.active {
 }
 .red {
 	color: #f5716e !important
+}
+.s-s {
+	background: #709bbd
+}
+.s-s .row * {
+	color: #d5edff
 }
