--- a/web_server/html/dark.css
+++ b/web_server/html/dark.css
@@ -1,123 +1,218 @@
-#logo-img {
-	background: none
+#logo-img
+{
+    background: none;
 }
-#nav {
-	background: #1B1B21
+
+#nav
+{
+    background: #1b1b21;
 }
-body {
-	background: #28282E;
-	color: #fff
+
+body
+{
+    color: #fff;
+    background: #28282e;
 }
-nav .main-header {
-	background: #1B1B21 !important
+
+nav .main-header
+{
+    background: #1b1b21 !important;
 }
-button, .reboot {
-	background: #61616f
+
+button,
+.reboot
+{
+    background: #61616f;
 }
-button:hover, .reboot:hover {
-	background: #6c6c79;
+
+button:hover,
+.reboot:hover
+{
+    background: #6c6c79;
 }
-.secondary {
-	color: #bfbfbf;
+
+.secondary
+{
+    color: #bfbfbf;
 }
-.secondary:hover {
-	background: rgba(255,255,255,0.1);
-	color: #e4e4e4;
+
+.secondary:hover
+{
+    color: #e4e4e4;
+    background: rgba(255, 255, 255, .1);
 }
-*, .input-container label {
-	color: #dadada
+
+*,
+.input-container label
+{
+    color: #dadada;
 }
-.settingsHeader, .settingsHeader *, .main-wrap, .WiFi span, td, th, .input-container input:valid + label, .input-container input:invalid:not(:placeholder-shown) + label, .input-container input:focus + label {
-	color: #dadada !important
+
+.settingsHeader,
+.settingsHeader *,
+.main-wrap,
+.WiFi span,
+td,
+th,
+.input-container input:valid + label,
+.input-container input:invalid:not(:placeholder-shown) + label,
+.input-container input:focus + label
+{
+    color: #dadada !important;
 }
-#networksFound, #apMAC {
-	background: rgba(255, 255, 255, 0.1)
+
+#networksFound,
+#apMAC
+{
+    background: rgba(255, 255, 255, .1);
 }
-.card, .card-basic, table {
-	background: #37373D
+
+.card,
+.card-basic,
+table
+{
+    background: #37373d;
 }
-.WiFi svg {
-	fill: #ffffff
+
+.WiFi svg
+{
+    fill: #fff;
 }
-label.checkbox {
-	border-color: #E1E1E1
+
+label.checkbox
+{
+    border-color: #e1e1e1;
 }
-input[type="checkbox"]:checked + label {
-	background: #8b8b92;
-	border-color: #8b8b92
+
+input[type='checkbox']:checked + label
+{
+    border-color: #8b8b92;
+    background: #8b8b92;
 }
-#spinner-container {
-	background: #3e3e3e
+
+#spinner-container
+{
+    background: #3e3e3e;
 }
-.edit {
-	fill: #dadada
+
+.edit
+{
+    fill: #dadada;
 }
-.input-container input:placeholder-shown {
-	border-color: #dadada
+
+.input-container input:placeholder-shown
+{
+    border-color: #dadada;
 }
-.input-container input:focus {
-	border-color: #fff !important
+
+.input-container input:focus
+{
+    border-color: #fff !important;
 }
-footer {
-	background: #2a2a31
+
+footer
+{
+    background: #2a2a31;
 }
-h1 {
-	color: rgba(255, 255, 255, .66)
+
+h1
+{
+    color: rgba(255, 255, 255, .66);
 }
-a {
-	color: #8aa0d4
+
+a
+{
+    color: #8aa0d4;
 }
-.card-basic #logo-img svg {
-	fill: #f9f9f9
+
+.card-basic #logo-img svg
+{
+    fill: #f9f9f9;
 }
-.card-basic #logo-img {
-	background: -webkit-linear-gradient(135deg, #41414a 0%, #2d2d31 100%);
-	background: linear-gradient(135deg, #41414a 0%, #2d2d31 100%)
+
+.card-basic #logo-img
+{
+    background: -webkit-linear-gradient(135deg, #41414a 0%, #2d2d31 100%);
+    background:         linear-gradient(135deg, #41414a 0%, #2d2d31 100%);
 }
-:root {
-	--theme-color: #1B1B21;
+
+:root
+{
+    --theme-color: #1b1b21;
 }
-@media (min-width:520px) {
-	::-webkit-scrollbar {
-		width: 14px;
-		background-color: #1D1D23
-	}
-	::-webkit-scrollbar-thumb {
-		background-color: #4B4B54;
-	}
-	::-webkit-scrollbar-thumb:hover {
-		background-color: #51515a
-	}
-	::-webkit-scrollbar-thumb:active, ::-webkit-scrollbar-thumb:disabled {
-		background-color: #393942
-	}
-	::-webkit-scrollbar-button {
-		width: 0;
-		height: 0;
-		display: none
-	}
-	::-webkit-scrollbar-corner {
-		background-color: transparent
-	}
+
+@media (min-width:520px)
+{
+    ::-webkit-scrollbar
+    {
+        width: 14px;
+
+        background-color: #1d1d23;
+    }
+    ::-webkit-scrollbar-thumb
+    {
+        background-color: #4b4b54;
+    }
+    ::-webkit-scrollbar-thumb:hover
+    {
+        background-color: #51515a;
+    }
+    ::-webkit-scrollbar-thumb:active,
+    ::-webkit-scrollbar-thumb:disabled
+    {
+        background-color: #393942;
+    }
+    ::-webkit-scrollbar-button
+    {
+        display: none;
+
+        width: 0;
+        height: 0;
+    }
+    ::-webkit-scrollbar-corner
+    {
+        background-color: transparent;
+    }
 }
-.input-container input:valid, .input-container input:placeholder-shown, .input-container input:invalid:focus {
-	border-bottom: 2px solid #47474e !important;
+
+.input-container input:valid,
+.input-container input:placeholder-shown,
+.input-container input:invalid:focus
+{
+    border-bottom: 2px solid #47474e !important;
 }
-nav #links a.active {
-	box-shadow: 0 -3px 0 #DADADA inset
+
+nav #links a.active
+{
+    box-shadow: 0 -3px 0 #dadada inset;
 }
-.green {
-	color: #4CAF50 !important;
+
+.green
+{
+    color: #4caf50 !important;
 }
-.red {
-	color: #f5716e !important
+
+.red
+{
+    color: #f5716e !important;
 }
-.s-s {
-	background: #709bbd
+
+.s-s
+{
+    background: #709bbd;
 }
-.s-s .row * {
-	color: #d5edff
+
+.s-s .row *
+{
+    color: #d5edff;
 }
-hr {
-	border: 1px solid rgba(0, 0, 0, 0.1)
+
+hr
+{
+    border: 1px solid rgba(0, 0, 0, .1);
+}
+
+#notification
+{
+    background: #61616f;
 }
